# aura-rewards

./: .gitignore  Cargo.toml  README.md  pnpm-lock.yaml
.cargo/: audit.toml
.github/: .env
.github/workflows/: ci-cargo-audit.yml  ci-lint-test.yml
clients/js/: package.json  pnpm-lock.yaml
clients/js/bench/: _setup.ts  create.ts
clients/js/src/: plugin.ts
clients/js/test/: _setup.ts  create.test.ts  getProgram.test.ts
clients/rust/: Cargo.toml
clients/rust/src/: lib.rs
clients/rust/tests/: create.rs
configs/: kinobi.cjs  shank.cjs  validator.cjs
idls/: mplx_rewards.json
programs/rewards/: Cargo.toml
programs/rewards/src/: asserts.rs  cpi.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  traits.rs  utils.rs
programs/rewards/src/instructions/: add_vault.rs  change_delegate.rs  claim.rs  close_mining.rs  deposit_mining.rs  distribute_rewards.rs  extend_stake.rs  fill_vault.rs  initialize_mining.rs  initialize_pool.rs  initialize_root.rs  mod.rs  restake_deposit.rs  withdraw_mining.rs
programs/rewards/src/instructions/penalties/: allow_claiming.rs  allow_tokenflow.rs  decrease_rewards.rs  mod.rs  restrict_batch_minting.rs  restrict_claiming.rs  restrict_tokenflow.rs  slash.rs
programs/rewards/src/state/: mining.rs  mod.rs  reward_pool.rs  reward_root.rs  reward_vault.rs  rewards_root.rs
programs/rewards/tests/rewards/: add_vault.rs  change_delegate.rs  claim.rs  claim_restrictions.rs  close_mining.rs  deposit_mining.rs  distribute_rewards.rs  extend_stake.rs  fill_vault.rs  initialize_mining.rs  initialize_pool.rs  instructions.rs  integration.rs  precision.rs  reallocation.rs  restake_deposit.rs  tests.rs  utils.rs  withdraw_mining.rs
programs/rewards/tests/rewards/penalties/: mod.rs  restrict_batch_minting.rs  slash.rs  tokenflow_restrictions.rs
