[package]
name = "rewards"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license-file = "../../LICENSE"

[lib]
crate-type = ["cdylib", "lib"]

[features]
serde = ["dep:serde", "dep:serde_with"]

[dependencies]
borsh = "^0.10"
num-derive = "^0.3"
num-traits = "^0.2"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.0", optional = true }
solana-program = ">= 1.14, < 1.19"
thiserror = "^1.0"

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = ">= 1.14, < 1.19"
solana-sdk = ">= 1.14, < 1.19"
