[package]
name = "mplx-rewards"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "^1.18"
spl-token = { version = "3.1", features = [ "no-entrypoint" ] }
borsh = { version = "1.5", features = ["derive"] } 
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "^1.18"
solana-sdk = "^1.18"

[lib]
crate-type = ["cdylib", "lib"]

[[test]]
name = "integration_tests"
path = "tests/rewards/tests.rs"

