[package]
name = "mplx-rewards"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "^1.18"
spl-token = { version = "4", features = ["no-entrypoint"] }
borsh = { version = "1.5", features = ["derive"] }
num-derive = "0.4"
num-traits = "0.2"
thiserror = "1.0"
shank = "0.4.2"

[dev-dependencies]
solana-program-test = "^1.18"
solana-sdk = "^1.18"

[lib]
crate-type = ["cdylib", "lib"]

[[test]]
name = "integration_tests"
path = "tests/rewards/tests.rs"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
